opam-version: "2.0"
version: "3.3.0"
maintainer: "Facebook Engineering"
authors: ["Facebook Engineering"]
license: "undefined"
homepage: "https://reason-native.com"
doc: "https://reason-native.com"


tags: []
build: [ ["dune" "build" "-p" "refmterr" ] ]
depends: [
  "dune"
  "re"
  "reason"   {< "4.0.0"}
  "ocaml"   {>= "4.2.0" & < "5.0.0"}
  "pastel"
  "atdgen"
  "console"
]
synopsis: "Reason Formatting of Errors"
description: "Reason Formatting of Errors"
